--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Depends: R (>= 3.4.0)
 Imports:
     assertthat
 Suggests: 
-    testthat
+    testthat,
+    covr
 RoxygenNote: 6.1.1
 Collate: 
     'dirichlet.r'
