The package passes R CMD check and all tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,11 @@ export(qdirichlet)
 export(rGenDirichlet)
 export(rdirichlet)
 importFrom(assertthat,assert_that)
+importFrom(stats,optim)
+importFrom(stats,pgamma)
+importFrom(stats,qbeta)
+importFrom(stats,qgamma)
+importFrom(stats,rbeta)
+importFrom(stats,rgamma)
+importFrom(stats,var)
+importFrom(stats,weighted.mean)
